# AutoREACTER

./: .MANIFEST.in.swp  .buildinfo  .gitignore  .readthedocs.yaml  AutoREACTER.py  Draft.html  LICENSE.md  MANIFEST.in  README.md  TEST_SUMMARY.md  __init__.py  change_log.html  clean_up.html  contact.html  genindex.html  getting-started.html  index.html  input-configuration.html  inputs.json  objects.inv  overview.html  pyproject.toml  requirements.txt  search.html  searchindex.js  supported-force-fields.html  supported-reactions.html  test.ipynb
.github/workflows/: docs.yml  sphinx-pages.yml  tests.yml
AutoREACTER/: __init__.py  _compat.py  _initialization_from_oop_old.py  arx_cli.py  cache.py  initialization.py  input_parser.py  session.py
AutoREACTER/detectors/: detector.py  functional_groups_detector.py  functional_groups_library.py  non_monomer_detector.py  reaction_detector.py  reaction_rules.json  reactions_library.py  secondary_reactions_library.py
AutoREACTER/reaction_preparation/: build_reaction_system.py
AutoREACTER/reaction_preparation/ff_wrapper/: REACTER_files_builder.py  ff_locator.py  ff_validator.py  ff_wrapper.py  molecule_3d_preparation.py
AutoREACTER/reaction_preparation/lunar_client/: REACTER_files_builder.py  config.py  ff_validator.py  foyer_api_wrapper.py  foyer_lammps_support.py  locate_lunar.py  lunar_api_wrapper.py  modifiers_molecule_files.py  molecule_3d_preparation.py  molecule_template_preparation.py  template_builder.py
AutoREACTER/reaction_preparation/reaction_processor/: atom_mapping.py  fragment_comparison.py  prepare_reactions.py  reaction_processing_support.py  reaction_progression.py  reaction_propagation.py  reaction_rule_enforcer.py  species_pool.py  utils.py  walker.py
AutoREACTER/reaction_template_builder/: run_reaction_template_pipeline.py
AutoREACTER/reaction_template_builder/lunar_client/: config.py
AutoREACTER/sim_setup/: simulation_setup.py  system_property_calculations.py
AutoREACTER/sim_setup/writers/: densification_writer.py  lammps_settings.py  post_eq_writer.py  pre_eq_writer.py  rxn_first_stage_writer.py  rxn_second_stage_writer.py  writer.py
_sources/: change_log.md.txt  getting-started.md.txt  index.rst.txt  supported-force-fields.md.txt  supported-reactions.md.txt
_static/: documentation_options.js
cache/lunar/: data1.mol  data2.mol  post1.mol  pre1.mol
cache/lunar/all2lmp/: data1_typed_IFF-post1_typed_IFF-nfiles=4.log.lunar  data1_typed_IFF.data  data1_typed_IFF.log.lunar  data1_typed_IFF.txt  data1_typed_IFF_merged.data  data2_typed_IFF.data  data2_typed_IFF.log.lunar  data2_typed_IFF.txt  data2_typed_IFF_merged.data  data2_typed_IFF_merged.lmpmol  in.create_atoms.script  in.fix_bond_react.script  post1_typed_IFF.data  post1_typed_IFF.log.lunar  post1_typed_IFF.txt  pre1-post1_rxn-map_commented.txt  pre1-post1_rxn-map_uncommented.txt  pre1_typed_IFF.data  pre1_typed_IFF.log.lunar  pre1_typed_IFF.txt
cache/lunar/atom_typing/: data1_typed.data  data1_typed.log.lunar  data1_typed.nta  data2_typed.data  data2_typed.log.lunar  data2_typed.nta  post1_typed.data  post1_typed.log.lunar  post1_typed.nta  pre1_typed.data  pre1_typed.log.lunar  pre1_typed.nta
docs/: requirements.txt
docs/source/: Draft.md  api_reference.md  api_reference.rst  change_log.md  clean_up.md  conf.py  contact.md  developer_page.md  getting-started.md  getting_started_pip_installation.md  getting_started_source_installation.md  index.rst  input-configuration.md  overview.md  supported-force-fields.md  supported-reactions.md
examples/: README.md  ReadME.MD  Untitled-1.ipynb  example2.py  example_1.ipynb  example_1.py  example_1_inputs.json  example_1_inputs_count_mode-second_loop.json  example_1_inputs_count_mode.json  example_1_inputs_count_mode_FF.json  example_1_inputs_count_mode_with_non_monomers.json  example_1_inputs_ratio_mode.json  example_1_inputs_stoichiometry_mode.json  ff_mode.json  input.json  inputs.json  inputs_2.json  new_schema - Copy.json  new_schema.json  run_AutoREACTER.py
examples/.ipynb_checkpoints/: example_1-checkpoint.ipynb
examples/legacy/: example_1.ipynb
frc_files/: pcff.frc
src/: cache.py  input_parser.py  reaction_lammps_mupt.py
src/AutoREACTER/: _initialization_from_oop_old.py  initialization.py  input_parser.py  main.py
src/autoREACT/: initialization.py
src/detectors/: functional_groups_detector.py  reaction_detector.py
src/reaction_lammps_mupt/: __init__.py  cache.py  extract_fragment.py  initializaion.py  initialization.py  input_parser.py  main.py
src/reaction_template_builder/: run_reaction_template_pipeline.py
tests/: conftest.py  test_lunar_api_wrapper.py
tests/reaction_lammps_mupt/: __init__.py  test_cache.py  test_initialization.py  test_input_parser.py
(+56 files in other folders)
