[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AutoREACTER"
version = "0.2.2"
description = "Automated reaction modeling setup for LAMMPS REACTER simulations"
authors = [
    {name = "Janitha Mahanthe", email = "jmahanth@stevens.edu"},
    {name = "Jacob Gissinger", email = "jgissing@stevens.edu"},
    ]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "networkx",
    "rdkit",
    "pillow",
    "setuptools",
    "matplotlib",
    "scipy",
]

[tool.setuptools.packages.find]
[tool.setuptools.package-data]
AutoREACTER = [
    "reaction_preparation/ff_wrapper/FF_files/*.frc",
    "reaction_preparation/ff_wrapper/FF_files/*.xml"
]
[project.urls]
Homepage = "https://github.com/NanoCIPHER-Lab/AutoREACTER"
Documentation = "https://autoreacter.org/"
Repository = "https://github.com/NanoCIPHER-Lab/AutoREACTER"
Issues = "https://github.com/NanoCIPHER-Lab/AutoREACTER/issues"