# ==============================================================================
# BUILD SYSTEM CONFIGURATION
# Tells pip and other tools how to build your package from source.
# ==============================================================================
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


# ==============================================================================
# CORE PROJECT METADATA
# This is the main information about your package that shows up on PyPI.
# ==============================================================================
[project]
name = "AutoREACTER"
description = "Automated reaction modeling setup for LAMMPS REACTER simulations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"

# We tell the build system that the "version" will be fetched dynamically 
# (defined in the setuptools section below) rather than hardcoded here.
dynamic = ["version"]

authors = [
    {name = "Janitha Mahanthe", email = "jmahanth@stevens.edu"},
    {name = "Jacob Gissinger", email = "jgissing@stevens.edu"},
]

# The external Python packages required to run AutoREACTER.
# Pip will automatically install these when someone installs your package.
dependencies = [
    "numpy",
    "pandas",
    "networkx",
    "rdkit",
    "pillow",
    "setuptools",
    "matplotlib",
    "scipy",
]


# ==============================================================================
# DYNAMIC FIELD MAPPING
# Tells setuptools exactly where to look to find the dynamic version number.
# ==============================================================================
[tool.setuptools.dynamic]
version = {attr = "AutoREACTER.__version__"}


# ==============================================================================
# PACKAGE DISCOVERY & DATA FILES
# Tells setuptools how to find your Python code and which non-Python files 
# (like force field .frc and .xml files) to include in the final installation.
# ==============================================================================
[tool.setuptools.packages.find]
# (Empty implies setuptools will auto-discover folders with __init__.py)

[tool.setuptools.package-data]
# Ensures that force field data files are packaged alongside the code.
AutoREACTER = [
    "reaction_preparation/ff_wrapper/FF_files/*.frc",
    "reaction_preparation/ff_wrapper/FF_files/*.xml"
]


# ==============================================================================
# PROJECT URLS
# Helpful links that will be displayed on your PyPI project page.
# ==============================================================================
[project.urls]
Homepage = "https://github.com/NanoCIPHER-Lab/AutoREACTER"
Documentation = "https://autoreacter.org/"
Repository = "https://github.com/NanoCIPHER-Lab/AutoREACTER"
Issues = "https://github.com/NanoCIPHER-Lab/AutoREACTER/issues"